Updated links for bureau page.

--- a/the-bureau/index.html
+++ b/the-bureau/index.html
@@ -194,12 +194,12 @@
                             </a>
                         </li>
                         <li class="list_item">
-                            <a class="list_link jump-link" href="#">
+                            <a class="list_link jump-link" href="leadership-calendar">
                                 View our leadership calendar
                             </a>
                         </li>
                         <li class="list_item">
-                            <a class="list_link jump-link" href="#">
+                            <a class="list_link jump-link" href="bureau-structure">
                                 Bureau organizational structure
                             </a>
                         </li>
@@ -218,7 +218,7 @@
                         <div class="media_body">
                             <div class="bureau-history_text">
                                 <p class="h4">In January of 2012, President Barack Obama appointed Rich Cordray to be the first Director of the CFPB.</p>
-                                <a class="jump-link" href="#">
+                                <a class="jump-link" href="history">
                                     Learn more about our history
                                 </a>
                             </div>
