Adds calendar filter ordering.

--- a/the-bureau/leadership-calendar/index.html
+++ b/the-bureau/leadership-calendar/index.html
@@ -70,8 +70,16 @@
                     {% set posts = query.search_with_url_arguments(size=20) %}
 
                         {{ post_macros.filters(
-                             ['calendar', 'range_date'], query, posts, 'calendar_event',
-                             { 'expand_label': 'Filter calendars' }
+                            ['calendar', 'range_date'], query, posts, 'calendar_event',
+                            {
+                                'expand_label': 'Filter calendars',
+                                'calendar_filter_order': [
+                                    'Richard Cordray',
+                                    'Steve Antonakes',
+                                    'Raj Date',
+                                    'Elizabeth Warren'
+                                ]
+                            }
                         ) }}
 
                     {% import "leadership-calendar-table.html" as calendar %}
@@ -91,14 +99,20 @@
                             dapibus, a viverra elit tempor.
                         </p>
                         {{ post_macros.filters(
-                             ['calendar', 'range_date'], query, posts, 'calendar_event',
-                             {
-                               'id_prefix': 'download',
-                               'expand_label': 'Download options',
-                               'show_current_filters': false,
-                               'action': 'pdf/',
-                               'submit_label': 'Download PDF'
-                             }
+                            ['calendar', 'range_date'], query, posts, 'calendar_event',
+                            {
+                                'id_prefix': 'download',
+                                'expand_label': 'Download options',
+                                'show_current_filters': false,
+                                'calendar_filter_order': [
+                                    'Richard Cordray',
+                                    'Steve Antonakes',
+                                    'Raj Date',
+                                    'Elizabeth Warren'
+                                ],
+                                'action': 'pdf/',
+                                'submit_label': 'Download PDF'
+                            }
                         ) }}
                     </section>
 
