Fisrt pass at using real office initiatives.

--- a/offices/students/_offices-students-nav.html
+++ b/offices/students/_offices-students-nav.html
@@ -1,6 +1,6 @@
 {% extends "nav-secondary.html" %}
 
-{% set query = queries.contact %}
+{% set query = queries.students_initiative %}
 {% set contacts = query.search_with_url_arguments(size=100) %}
 
 {% set navigation_bar = [] -%}
