--- a/offices/students/index.html
+++ b/offices/students/index.html
@@ -1,11 +1,10 @@
-{% extends "_offices-single.html" %}
+{% extends "_offices-index.html" %}
 
-{% set initiative = students_initiative %}
+{% set test_prop = 'Students Office' -%}
 
 {% block office_nav %}
     {% set path = '/offices/students/' %}
     {% set office_name = 'Students Office' %}
     {% set office_slug = 'students' %}
-    {% set active_page = students_initiative.slug %}
     {% include "_offices-nav.html" %}
 {% endblock %}
