--- a/offices/_offices-single.html
+++ b/offices/_offices-single.html
@@ -73,7 +73,9 @@
                                       <ul class="list__links">
                                           {% for link in subinitiative.links %}
                                               <li class="list_item">
-                                                  <a class="jump-link jump-link__right list_link"
+                                                  <a class="jump-link 
+                                                            jump-link__right 
+                                                            list_link"
                                                      href="{{link[0] if link[0]}}">
                                                       {{link[1] if link[1]}}
                                                   </a>
