Office page fixes: remove unnecessary variables, whitespace, indentation.

--- a/offices/_offices-nav.html
+++ b/offices/_offices-nav.html
@@ -1,10 +1,10 @@
 {% extends "nav-secondary.html" %}
 
 {% set query = queries.initiative %}
-{% set filter = 'related_office:' + office_slug %}
+{% set filter = 'related_office:' + office.slug %}
 {% set contacts = query.search_with_url_arguments(size=100,q=filter) %}
 
-{% set navigation_bar = [(path, 'index', office_name)] -%}
+{% set navigation_bar = [(path, 'index', office.title)] -%}
 {% for contact in contacts %}
     {%- set _ignore = navigation_bar.append((path + contact.slug+'/', contact.slug, contact.title|safe)) -%}
 {% endfor %}
