Set initiative paths on office template

--- a/offices/_offices-index.html
+++ b/offices/_offices-index.html
@@ -185,7 +185,7 @@
                                         </p>
                                         <a class="jump-link 
                                                   jump-link__right"
-                                            href="{{path}}">
+                                            href="{{path ~ initiative.slug}}">
                                             Read more
                                         </a>
                                     </div>
