--- a/activities/index.html
+++ b/activities/index.html
@@ -66,7 +66,7 @@
                         </tbody>
                     </table>
 
-                    {{ pagination(archives, []) }}
+                    {{- pagination(archives, []) }}
 
                 </section>
             </div><!-- END .content_main -->
