MArgin tweak and documentation update.

--- a/activities/index.html
+++ b/activities/index.html
@@ -30,7 +30,7 @@
                         molestias non optio enim dignissimos amet consequatur.
                     </p>
 
-                    <div class="block">
+                    <div class="block u-mt30">
                         
                         {{ post_macros.filters(
                                 ['activity_category', 'tags', 'range_date'], query, archives, 'calendar_event',
