Add unique titles to budget pages.

--- a/budget/financial-report/index.html
+++ b/budget/financial-report/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title -%}
-    Budget and Strategy
+    Financial Report & Update
 {%- endblock %}
 
 {% block desc -%}
