--- a/budget/performance-plan-report/index.html
+++ b/budget/performance-plan-report/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title -%}
-    Budget and Strategy
+    Performance Plan Report
 {%- endblock %}
 
 {% block desc -%}
