Removes font files in favor of using the font service. This means using a grunt task to replace a bunch of stuff.

--- a/budget/strategic-plan/interactive/index.html
+++ b/budget/strategic-plan/interactive/index.html
@@ -14,9 +14,7 @@
 {% block meta_viewport %}{% endblock meta_viewport %}
 
 {% block css %}
-    <link rel="stylesheet" href="/static-legacy/css/woff.css">
-    <!--[if lt IE 9]>      <link rel="stylesheet" href="/static-legacy/css/eot.css"> <![endif]-->
-    <!--[if gt IE 8]><!--> <link rel="stylesheet" href="/static-legacy/css/woff.css"> <!--<![endif]-->
+    <link rel="stylesheet" href="/static-legacy/css/licensed-fonts.css">
     <link rel="stylesheet" href="/static-legacy/css/styles.css">
 {% endblock %}
 
