--- a/budget/strategic-plan/index.html
+++ b/budget/strategic-plan/index.html
@@ -44,15 +44,15 @@
                         </h2>
                         <ul class="list list__horizontal">
                             <li class="list_item">
-                                <a class="list_link icon-link icon-link__chart"
+                                <a class="list_link icon-link icon-link__right"
                                    href="interactive/"
                                    target="_blank">
                                     <span class="icon-link_text">Interactive</span>
                                 </a>
                             </li>
                             <li class="list_item">
-                                <a class="list_link icon-link icon-link__download"
-                                   href="http://www.consumerfinance.gov/f/strategic-plan.pdf">
+                                <a class="list_link icon-link icon-link__pdf"
+                                   href="http://files.consumerfinance.gov/f/strategic-plan.pdf">
                                     <span class="icon-link_text">PDF</span>
                                 </a>
                             </li>
