Style imported wordpress content on budget pages.

--- a/budget/financial-report/index.html
+++ b/budget/financial-report/index.html
@@ -40,7 +40,8 @@
                 </section>
                 <section class="block
                                 block__flush-top">
-                    <div class="budget_page-content">
+                    <div class="budget_page-content
+                                financial-report">
                         {% set page = get_document('pages', '63177') %}
                         {{page.content | safe}}
                     </div>
