--- a/budget/funding-request/index.html
+++ b/budget/funding-request/index.html
@@ -40,7 +40,8 @@
                 </section>
                 <section class="block
                                 block__flush-top">
-                    <div class="budget_page-content">
+                    <div class="budget_page-content 
+                                funding-request">
                         {% set page = get_document('pages', '63181') %}
                         {{page.content | safe}}
                     </div>
