--- a/budget/performance-plan-report/index.html
+++ b/budget/performance-plan-report/index.html
@@ -40,7 +40,8 @@
                 </section>
                 <section class="block
                                 block__flush-top">
-                    <div class="budget_page-content">
+                    <div class="budget_page-content
+                                performance-plan">
                         {% set page = get_document('pages', '63173') %}
                         {{page.content | safe}}
                     </div>
