--- a/budget/strategic-plan/index.html
+++ b/budget/strategic-plan/index.html
@@ -44,7 +44,7 @@
                         CFPB Strategic Plan, Budget, and Performance Plan and Report
                     </h1>
                 
-                    <a class="jump-link jump-link__download"
+                    <a class="jump-link jump-link__pdf"
                        href="">
                         PDF
                     </a>
