Updates from code review

--- a/doing-business-with-us/future-requests/index.html
+++ b/doing-business-with-us/future-requests/index.html
@@ -34,9 +34,9 @@
                 <h1>Expected Procurement Requests</h1>
                 <p class="h3">
                     These are significant procurement requests we expect to make in the near future.
-                    The Bureau's strategic plan extends over five years,
-                    so we can make reasonable estimates about what we&rsquo;re likely to need,
-                    though of course these requests aren&rsquo;t certain to happen as listed.
+                    The Bureau’s strategic plan extends over five years,
+                    so we can make reasonable estimates about what we’re likely to need,
+                    though of course these requests aren’t certain to happen as listed.
                 </p>
                 <p class="short-desc">
                     <a class="icon-link icon-link__external-link"
