--- a/doing-business-with-us/index.html
+++ b/doing-business-with-us/index.html
@@ -105,19 +105,19 @@
                             We also send a memo to the Office of Management and Budget
                             describing budget analysis we are planning to do.
                         </p>
-                        <a class="jump-link jump-link__right" href="/past-awards/">
+                        <a class="jump-link jump-link__right" href="past-awards/">
                             <span class="jump-link_text">See our yearly service contract information</span>
                         </a>
                     </section>
 
-                    <section class="content-l_col 
+                    <section class="content-l_col
                                     content-l_col-1-2
                                     content-l_col__before-divider">
                         <h1 class="h3">Small, women-owned, and minority-owned businesses</h1>
                         <p class="short-desc">
                             We have specific information about special processes and opportunities for small, women-owned, and minority-owned businesses. You can also see data on existing work we do with these businesses.
                         </p>
-                        <a class="jump-link jump-link__right" href="/small-businesses/">
+                        <a class="jump-link jump-link__right" href="small-businesses/">
                             <span class="jump-link_text">More information for small, women-owned, and minority-owned businesses</span>
                         </a>
                     </section>
