--- a/doing-business-with-us/small-businesses/index.html
+++ b/doing-business-with-us/small-businesses/index.html
@@ -45,7 +45,7 @@
                 <div class="block content-l">
 
                     <div class="content-l_col
-                                    content-l_col-1-2">
+                                content-l_col-1-2">
                         <p class="short-desc">
                             Here's what you should know about working with the CFPB as a small business.
                         </p>
@@ -65,7 +65,7 @@
                             </li>
                             <li class="list_item">
                                 <a class="list_link icon-link icon-link__before icon-link__pdf"
-                                   href="#{http://files.consumerfinance.gov/f/201305_cfpb_Small-business-guide.pdf}">
+                                   href="http://files.consumerfinance.gov/f/201305_cfpb_Small-business-guide.pdf">
                                     <span class="icon-link_text">Info for women- and minority-owned
                                         businesses (LINK NEEDED)</span>
                                 </a>
@@ -73,9 +73,9 @@
                         </ul>
                     </div>
 
-                    <div class="content-l_col 
-                                    content-l_col-1-2
-                                    content-l_col__before-divider">
+                    <div class="content-l_col
+                                content-l_col-1-2
+                                content-l_col__before-divider">
                         <p class="short-desc">
                             The System of Award Management has tools to help small businesses
                             compete for federal business.
